--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+certifi==2024.12.14
+charset-normalizer==3.4.0
 colorama==0.4.6
+idna==3.10
 imbalanced-learn==0.13.0
 imblearn==0.0
 joblib==1.4.2
@@ -7,10 +10,12 @@ nvidia-nccl-cu12==2.23.4
 pandas==2.2.3
 python-dateutil==2.9.0.post0
 pytz==2024.2
+requests==2.32.3
 scikit-learn==1.6.0
 scipy==1.14.1
 six==1.17.0
 sklearn-compat==0.1.3
 threadpoolctl==3.5.0
 tzdata==2024.2
+urllib3==2.3.0
 xgboost==2.1.3
